--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name="com.krokowski.connectwx.WeatherActivity" android:label="@string/app_name">
+        <activity android:name=".WeatherActivity" android:label="@string/app_name" android:exported="true">
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </activity>
